# niem-json-guidance-auxiliary

./: .gitignore  Makefile.in  README.md  aspell-exceptions.txt  configure  configure.ac  context.jsonld  dot_macros.m4  object-model-for-exi.xsd  object-model.json  unconfigured.mk
examples/: array.json  number.json
examples/additional-properties-as-schema/: instance.json  schema.json  validate.bash
examples/crash/: instance-xsi-type.xml  instance.dot.m4  instance.json  model.dot.m4  schema.json
examples/crash/niem/domains/jxdm/6.0/: jxdm.xsd
examples/crash/niem/niem-core/4.0/: niem-core.xsd
examples/ecf/: ecf.schema.json  schedulerequest.schema.json
examples/ecf/niem/: aamva_d20.schema.json  biom.schema.json  cbrn.schema.json  cbrncl.schema.json  hs.schema.json  intel.schema.json  iso_3166.schema.json  iso_4217.schema.json  iso_639-3.schema.json  j.schema.json  local.schema.json  mmucc.schema.json  nc.schema.json  ncic.schema.json  niem-xs.schema.json  structures.schema.json  ucr.schema.json  unece.schema.json  usps.schema.json  xs.schema.json
examples/object-model/: object-model.xml
examples/object-model/object-model-iepd/niem/codes/unece_rec20/3.0/: unece_rec20-misc.xsd
examples/ordered-properties/: README.md  instance.json  mixed.json  mixed.xml  not-mixed.json
object-model/: get-length-of-longest-line.awk  object-model.dot  object-model.dot.m4  object-model.xml
object-model-iepd/niem/: wantlist.xml  xml-catalog.xml
object-model-iepd/niem/codes/fbi_ncic/3.2/: fbi_ncic.xsd
object-model-iepd/niem/domains/cyfs/3.2/: cyfs.xsd
object-model-iepd/niem/niem-core/3.0/: niem-core.xsd
object-model-iepd/niem/proxy/xsd/3.0/: xs.xsd
object-model/object-model-iepd/niem/domains/jxdm/5.2/: jxdm.xsd
sample-iepd/: changelog.txt  mpd-catalog.xml  readme.txt
sample-iepd/application-info/: 00-JSONiepd.xpr
sample-iepd/base-xsd/extension/: CrashDriver.xsd
sample-iepd/base-xsd/niem/: wantlist.xml  xml-catalog.xml
sample-iepd/base-xsd/niem/adapters/geospatial/3.0/: geospatial.xsd
sample-iepd/base-xsd/niem/domains/jxdm/5.1/: jxdm.xsd
sample-iepd/base-xsd/niem/niem-core/3.0/: niem-core.xsd
sample-iepd/base-xsd/niem/proxy/xsd/3.0/: xs.xsd
sample-iepd/iep-samples/: iep1.xml  iep2.xml
